--- a/23.9.21/logo/style.css
+++ b/23.9.21/logo/style.css
@@ -18,10 +18,43 @@ main{
     max-width: 100%;
     height: 100vh;
     background-color: aliceblue;
+
+}
+.brand{
+    flex-basis:50%
+}
+.brand--point{
+    color:dodgerblue;
 }
 .site__header{
+    width: 50%;
     display:flex;
     align-items: center;
     justify-content: center;
     background-color: white;
+    padding: 1rem;
+    box-shadow : 0px 0px 3px rgba(0,0,0, 0.25);
+    border-radius: 8px;
+    
+}
+nav{
+    flex-basis: 50%;
+    height: 100%;
+}
+.menu{
+    font-size: 13px;
+    display: flex;
+    gap:1rem;
+    height: 100%;
+}
+
+.menu-item{
+    height: 100%;
+    border: 1px solid #ddd;
+    text-align: center;
+}
+li:active .menu-item{ 
+    height: 100%;
+    background-color: blue;
+    color:white;
 }
