--- a/23.9.21/logo/예제/gallery.css
+++ b/23.9.21/logo/예제/gallery.css
@@ -22,4 +22,34 @@ img{
     background-color: aliceblue;
     padding: 1rem;
     border-radius: 8px;
+    cursor: pointer;
+    /* 유저가 드레그 할수 없도록 처리 */
+    user-select: none;
+    margin-bottom: 0.5rem;
+}
+#list li:active{
+    background-color: black;
+    color:white;
+}
+#list li.check{
+    background-color: dodgerblue;
+    color:white;
+    font-weight: bold;
+}
+figure{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+figure figcaption{
+    position: absolute;
+    top:0;
+    left: 0;
+    background-color: rgba(0,0,0,0.5);
+    color:white;
+    width: 100%;
+    padding: 1rem;
+}
+figure img{
+    height: 100%;
 }
