--- a/23.9.8/befere after/style.css
+++ b/23.9.8/befere after/style.css
@@ -3,20 +3,20 @@ h1{
     padding: 0.5rem;
     width: fit-content;
 }
-h1:before,
-h1:after{
+h1::before,
+h1::after{
     position: absolute;
     top:0;
     content:'"';
     width:20px;
     height:100%;
 }
-h1:before{
+h1::before{
     
     left:-10px;
 
 }
-h1:after{
+h1::after{
 
     left:100%;
 
