회원가입창

--- a/hompage/style.css
+++ b/hompage/style.css
@@ -3,100 +3,124 @@
   padding: 0;
   box-sizing: border-box;
 }
+.header-container {
+  padding-bottom: 10px;
+  height: 10vh;
+}
 .header {
-  background-color: rgb(238, 238, 117);
+  background-color: rgb(255, 214, 92);
   border-radius: 50px;
   width: 100%;
-  height: 10vh;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-img{
-  width: 100%;
-  max-width: 100%;
-  /* height: 25%; */
-  object-fit: cover;
-
+.menu-container {
+  padding-bottom: 10px;
+  height: 10vh;
 }
-figure{
-  background-color: dodgerblue;
-}
-/* ul {
-  list-style: none;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-} */
-.menu-list > li {
-  margin: 0 auto;
+.menu {
+  height: 100%;
 }
 .menu-list {
-  /* margin-top: 1rem; */
-  background-color: blueviolet;
+  background-color: rgb(209, 179, 224);
   border-radius: 50px;
   width: 100%;
-  height: 10vh;
+  height: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   list-style: none;
   color: white;
   font-weight: bold;
+  gap: 6rem;
 }
 .kate {
-  background-color: rgb(240, 207, 213);
+  background-color: rgb(250, 235, 235);
   padding-top: 2rem;
   padding-left: 1rem;
   padding-right: 1rem;
   padding-bottom: auto;
   border-radius: 25px;
   height: 70vh;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
-
 }
 .kate > ul {
   margin: 1rem;
   padding-bottom: 2rem;
-  width: 100%;
 }
 .kate > ul > li {
   border-bottom: 1px solid #eee;
   list-style: none;
   cursor: pointer;
-  background-color: pink;
-
+  background-color: rgb(230, 179, 179);
+  padding: 1rem;
+  color: white;
+  font-weight: bold;
 }
 .kate > ul > li:last-child {
   border-bottom: none;
 }
-.card{
-  border: 1px solid #eee;
-  background-color: #ddd;
+img {
+  width: 100%;
+  max-width: 100%;
+  /* height: 100%; */
+  /* object-fit: cover; */
 }
-.cart{
-  background-color: rgb(240, 207, 213);
+.card {
+  border: 1px solid #eee;
+  background-color: rgb(250, 250, 250);
+  padding: 10px;
+  display: flex;
+  position: relative;
+}
+.sp {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+}
+figure {
+  background-color: white;
+  /* padding: 10px; */
+  height: 100%;
+  aspect-ratio: 3/2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card > p {
+  height: 100%;
+}
+.cart {
+  background-color: rgb(255, 235, 235);
+  border-radius: 50px;
   padding-top: 2rem;
   padding-left: 1rem;
   padding-right: 1rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  gap: 1.5rem;
 }
-.body{
+input {
+  width: 100%;
+}
+button {
+  padding: 0px 5px;
+}
+.body {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 10px;
 }
-.footer{
-  /* margin-top: 1rem; */
-  background-color: blueviolet;
-  border-radius: 50px;
-  width: 100%;
+.footer-container {
   height: 10vh;
+  padding-top: 10px;
+}
+.footer {
+  background-color: rgb(204, 204, 242);
+  border-radius: 25px;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -104,7 +128,7 @@ figure{
   color: white;
   font-weight: bold;
 }
-.card{
+.card {
   display: flex;
   flex-direction: column;
   justify-content: center;
