--- a/23.9.26/swiper/style.css
+++ b/23.9.26/swiper/style.css
@@ -5,7 +5,7 @@
     margin-right: auto;
   }
 .swiper .first{
-    background-image: url(https://images.pexels.com/photos/1653877/pexels-photo-1653877.jpeg?auto=compress&cs=tinysrgb&w=400);
+    /* background-image: url(https://images.pexels.com/photos/1653877/pexels-photo-1653877.jpeg?auto=compress&cs=tinysrgb&w=400); */
     background-position: center;
     background-size: cover;
 }
