--- a/리엑트/03-moviepedia/src/App.css
+++ b/리엑트/03-moviepedia/src/App.css
@@ -1,38 +1,127 @@
-.App {
-  text-align: center;
+*{ 
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  margin: 0;
+  background-color: #fbfbfd;
+}
+.App input,
+.App textarea{
+  padding: 15px, 20px;
+  border: solid 1px #f9f9f9;
+  border-radius: 6px;
+  outline: none;
+  font-size: 16px;
+  background-color: #fbfbfd;
+  font-family: sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App input::placeholder,
+.App textarea::placeholder{
+  color :#bdbdbd
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
   display: flex;
   flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+
+}
+.App .App-nav,
+.App .App-footer{
+  flex : none;
+}
+
+
+.App .App-container {
+  /* flex : grow shrink */
+  flex: 1 1;
+}
+
+.App-nav{
+  height: 65px;
+  background-color: #fff;
+  border-bottom: 1px solid #e2e2e2;
+
+}
+
+.App-nav-container,
+.App-container,
+.App-footer-container{
+  width: 100%;
+  max-width: 860px;
+  margin: auto;
+}
+
+.App-nav-container{
+  display: flex;
+  height: 100%;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-container{
+  padding: 50px 21px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-logo{
+  margin-top: -5px;
+}
+
+.App-sorts {
+  margin:  51px 0 23px;
+}
+
+.AppSortButton{
+  padding: 12px 40px;
+  border: none;
+  color : #000;
+  font-size: 18px;
+  background-color: transparent;
+}
+.AppSortButton:not(:disabled){
+  cursor: pointer;
+}
+
+.AppSortButton.selected {
+  border-radius: 0 10px 0 10px;
+  color:#fff;
+  background-color: #000;
+}
+
+.App-ReviewList{
+  padding: 30px 30px 0;
+  border-radius: 5px;
+  box-shadow:  0 0 11px rgba(105, 105,105,0.2);
+}
+
+.App-ReviewForm{
+  padding: 30px 32px 30px 30px ;
+  background-position: center top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  filter: drop-shadow(0 0 11px rgba(105, 105,105,0.2));
+  border-radius: 5px;
+}
+
+.App-load-more-button{
+  width: 100%;
+  padding: 25px 0;
+  font-size: 16px;
+  background-color: transparent;
+  border : none;
+  cursor: pointer;
+}
+
+.App-footer{
+  background-color: #000;
+}
+
+.App-footer-container {
+  padding: 30px 20px;
+  font-size : 14px;
+  letter-spacing: -0.25px;
+  text-align: right;
+  color:#838383;
 }
