--- a/manager/src/Manager.module.css
+++ b/manager/src/Manager.module.css
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 
-html, body {
-    height: 100vh;
+.nav {
+    height: 100px;
     width: 100%;
 }
 
@@ -17,7 +17,7 @@ html, body {
     justify-content: center;
 }
 
-*:not(.bene button){
+*:not(.bene button) {
     /* background-color: #666; */
 }
 
@@ -28,15 +28,112 @@ html, body {
 
 /* 베너 */
 
-.container{
+.back {
     width: 100%;
-    height: 100%;
-    max-width: 1440px;
+    height: 750px;
+    /* max-width: 1440px; */
     margin: 0 auto;
-    background-color: #000;
+    background-color: #666;
 }
 
-.menu{
-    width: 464px;
-    padding: 50px;
+.container {
+    width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 50px 0;
+    display: flex;
+    gap: 24px;
+}
+
+.menu {
+    width: 100%;
+    max-width: 464px;
+}
+
+.btns {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 50px;
+}
+
+.input {
+    width: 100%;
+    height: 40px;
+    border-radius: 999px;
+    padding-left: 64px;
+    margin-bottom: 20px;
+}
+
+.userBox {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+}
+
+.user {
+    background-color: #fff;
+    width: 100%;
+    height: 48px;
+    border-radius: 4px;
+    padding: 4px 0 4px 18px;
+    display: flex;
+    align-items: center;
+}
+
+.name {
+    margin-left: 24px;
+    font-size: 16px;
+}
+
+.icon {
+    margin-left: 237px;
+}
+
+.text {
+    margin-left: 4px;
+    font-size: 12px;
+}
+
+.userInfo {
+    width: 952px;
+    height: 661px;
+    border-radius: 20px;
+    background-color: #fff;
+    padding: 50px 122px;
+    display: flex;
+    flex-direction: column;
+}
+
+.info {
+    display: flex;
+    justify-content: space-between;
+}
+
+.userText {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-between;
+}
+
+.userId {
+    width: 340px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.userDate {
+    width: 220px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.corr{
+    margin-top: auto;
 }
